# maxscale-cdc-connector

./: CMakeLists.txt  LICENSE.TXT  README.md  cdc_connector.cpp  cdc_connector.h
examples/: Makefile
